--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -53,6 +53,22 @@
     font-weight: 700;
   }
 
+  &_bold2 {
+    font-weight: 700;
+
+    &:-ms-input-placeholder {
+      font-weight: 400;
+    }
+
+    &::placeholder {
+      font-weight: 400;
+    }
+  }
+
+  .is-top &_bold2 {
+    border-bottom-color: $color-basic;
+  }
+
   .is-error & {
     border-bottom-color: $color-error;
   }
