--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -379,6 +379,24 @@
       }
     }
 
+    &_big {
+      @include heading-2;
+
+      font-weight: 700;
+
+      @include screen('lg') {
+        @include heading-1-sm;
+
+        line-height: 1.2;
+      }
+
+      @include screen('sm') {
+        @include heading-3;
+
+        line-height: 1.2;
+      }
+    }
+
     &_mid {
       @include heading-4;
 
