--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -47,7 +47,7 @@ block content
         +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
         +link(href="signup-afterverification-message-host.html") Sign Up after verification message (for host) (signup-afterverification-message-host.html)
         +link(href="signup-afterverification-message.html") Sign Up after verification message (signup-afterverification-message.html)
-        //- +link(href="signup-host-info.html") Sign Up host important info (signup-host-info.html)
+        +link(href="signup-host-info.html") Sign Up host important info (signup-host-info.html)
 
       +page-title._small Попапы
       +e.list
