sign up host info

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -47,6 +47,11 @@
       }
     }
 
+    .choices ~ & {
+      padding-right: 20px;
+      box-sizing: border-box;
+    }
+
     #{$b}.is-top &,
     .choices.is-item-select~&,
     .choices.is-open~& {
@@ -56,6 +61,7 @@
       color: $color-basic;
       line-height: (26/14);
       transform: translate3d(0, -27px, 0);
+      padding-right: 0;
 
       @include screen('sm') {
         @include text;
