--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   border-radius: 0;
   color: $color-basic;
+  font-weight: 700;
   padding-top: 5px;
   padding-bottom: 8px;
   transition: border $ease-main, color $ease-main;
@@ -18,10 +19,12 @@
 
   &:-ms-input-placeholder {
     color: transparent;
+    font-weight: 400;
   }
 
   &::placeholder {
     color: transparent;
+    font-weight: 400;
   }
 
   &:hover,&:focus {
@@ -53,19 +56,7 @@
     font-weight: 700;
   }
 
-  &_bold2 {
-    font-weight: 700;
-
-    &:-ms-input-placeholder {
-      font-weight: 400;
-    }
-
-    &::placeholder {
-      font-weight: 400;
-    }
-  }
-
-  .is-top &_bold2 {
+  .is-top & {
     border-bottom-color: $color-basic;
   }
 
