--- a/app/blocks/form-elements/form-selects.scss
+++ b/app/blocks/form-elements/form-selects.scss
@@ -718,6 +718,7 @@
       color: $color-basic;
       transition: color $ease-main;
       overflow: hidden;
+      box-sizing: border-box;
 
       @include screen('sm') {
         @include text16;
@@ -748,6 +749,7 @@
         width: 100%;
         max-width: none;
         transition: border $ease-main;
+        box-sizing: border-box;
 
         @include ellipsis(100%);
 
@@ -830,6 +832,14 @@
         }
       }
     }
+
+    // &.is-item-select #{$k}__inner {
+    //   font-weight: 700;
+    // }
+
+    // &.is-item-select #{$k}__list--single {
+    //   border-color: $color-basic;
+    // }
   }
 
   &_input2 {
@@ -955,6 +965,14 @@
         }
       }
     }
+
+    // &.is-item-select #{$k}__inner {
+    //   font-weight: 700;
+    // }
+
+    // &.is-item-select #{$k}__list--single {
+    //   border-color: $color-basic;
+    // }
   }
 
   &_popup {
