--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -116,6 +116,12 @@
       }
     }
 
+    &_mg88 {
+      &:not(:last-of-type) {
+        margin-bottom: 88px;
+      }
+    }
+
     &_mg90 {
       &:not(:last-of-type) {
         margin-bottom: 90px;
@@ -304,6 +310,14 @@
       }
     }
 
+    &_mg62 {
+      margin-bottom: 62px;
+
+      @include screen('sm') {
+        margin-bottom: 50px;
+      }
+    }
+
     &_mg65 {
       margin-bottom: 65px;
 
@@ -349,6 +363,10 @@
       flex-wrap: wrap;
       align-content: baseline;
     }
+
+    &_mg0 {
+      margin-bottom: 0;
+    }
   }
 
   &__title {
@@ -375,6 +393,16 @@
 
         @include screen('sm') {
           margin-bottom: 5px;
+        }
+      }
+    }
+
+    &_mg48 {
+      &:not(:last-child) {
+        margin-bottom: 48px;
+
+        @include screen('sm') {
+          margin-bottom: 15px;
         }
       }
     }
