--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -331,6 +331,14 @@
     }
   }
 
+  &_mt64 {
+    margin-top: 64px;
+
+    @include screen('lg') {
+      margin-top: 30px;
+    }
+  }
+
   &_reverse {
 
     .container {
