--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -123,6 +123,7 @@ include ../blocks/spoiler/spoiler
 include ../blocks/state/state
 include ../blocks/status-button/status-button
 include ../blocks/status/status
+include ../blocks/steps/steps
 include ../blocks/sticky-message/sticky-message
 include ../blocks/summary-table/summary-table
 include ../blocks/switch/switch
