--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -161,6 +161,7 @@ $color-user-link-active: #9ea7b3;
 $color-notice-bg: #ecf5f7;
 $color-notice-bg-hover: #d9e8eb;
 $color-form-toggle-title: #1f242a;
+$color-step-active: #2a3037;
 
 // ##########
 // Transitions
