--- a/app/components/page-header/page-header.scss
+++ b/app/components/page-header/page-header.scss
@@ -317,6 +317,29 @@
     }
   }
 
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 19.9vw;
+    height: 100%;
+    overflow: hidden;
+    z-index: 1;
+
+    @media only screen and (max-width: 1700px) {
+      width: 18vw;
+    }
+
+    &-image {
+      position: absolute;
+      right: 0;
+      bottom: 10%;
+      height: 100%;
+      transform-origin: 100% 50% 0;
+      transform: scale(1.32);
+    }
+  }
+
   .breadcrumbs {
     &:not(:last-child) {
       margin-right: 30px;
@@ -399,6 +422,24 @@
           }
         }
       }
+    }
+  }
+
+  &_styled {
+    position: relative;
+    background-color: $color-white;
+    padding: 15px 0 20px;
+    min-height: 194px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+
+    @include screen('md') {
+      min-height: 100px;
+    }
+
+    .container {
+      z-index: 2;
     }
   }
 }
