--- a/app/blocks/form-toggle/form-toggle.scss
+++ b/app/blocks/form-toggle/form-toggle.scss
@@ -73,6 +73,12 @@
     display: inline-block;
     margin-bottom: 34px;
     border-bottom: 1px solid currentColor;
+    box-sizing: border-box;
+    padding-right: 20px;
+
+    @include screen('lg') {
+      padding-right: 0;
+    }
 
     @include screen('sm') {
       @include heading-4;
@@ -103,6 +109,12 @@
   &__subtitle {
     font-weight: 700;
     margin-bottom: 11px;
+    box-sizing: border-box;
+    padding-right: 20px;
+
+    @include screen('lg') {
+      padding-right: 0;
+    }
 
     @include screen('sm') {
       margin-bottom: 5px;
