--- a/app/blocks/logo/logo.pug
+++ b/app/blocks/logo/logo.pug
@@ -1,26 +1,26 @@
 mixin logo(tag)
   +b(tag || 'a').logo&attributes(attributes)
-    +e.SVG.icon(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 171.5 53.7")
+    +e.SVG.icon(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 169.51 54")
       defs
-          linearGradient#logo-grad1(x1="28.97" x2="42.59" y1="23.48" y2="43.67" gradientUnits="userSpaceOnUse")
+          linearGradient#logo-grad1(x1="29.14" y1="23.62" x2="42.84" y2="43.92" gradientUnits="userSpaceOnUse")
               stop(offset="0.25" stop-color="#008199")
               stop(offset="1" stop-color="#0de1aa")
-          linearGradient#logo-grad2(x1="16.86" x2="5.5" y1="21.43" y2="45.8" xlink:href="#logo-grad1")
-          linearGradient#logo-grad3(x1="23.03" x2="23.61" y1="0.02" y2="16.82" xlink:href="#logo-grad1")
+          linearGradient#logo-grad2(x1="16.96" y1="21.55" x2="5.53" y2="46.06" xlink:href="#logo-grad1")
+          linearGradient#logo-grad3(x1="23.16" y1="0.02" x2="23.75" y2="16.92" xlink:href="#logo-grad1")
       +e.G.image
-          path(fill="url(#logo-grad1)" d="M42.5,16.16v22L29.13,45.9v-6l11.11-6.51V17.3L24.63,26.41V53.69L47,40.7V13.57ZM29.13,29l6.61-3.9v5.7l-6.61,3.9Z")
-          path(fill="url(#logo-grad2)" d="M0,13.57V40.7l22.37,13V37.31L11.26,30.8V25.11l11.11,6.5v-5.2L6.76,17.3V33.38l11.11,6.51v6L4.49,38.11V16.16Z")
-          polygon(fill="url(#logo-grad3)" points="0 13.57 4.5 16.16 23.5 5.19 42.51 16.16 47 13.57 23.5 0 0 13.57")
+          path(fill="url(#logo-grad1)" d="M42.75,16.25V38.33L29.29,46.17V40.12l11.18-6.54V17.4L24.78,26.56V54L47.27,40.93V13.64ZM29.29,29.16,36,25.25V31L29.29,34.9Z")
+          path(fill="url(#logo-grad2)" d="M0,13.64V40.93L22.49,54V37.52L11.32,31V25.25l11.17,6.54V26.56L6.8,17.4V33.58L18,40.12v6L4.52,38.32V16.25Z")
+          polygon(fill="url(#logo-grad3)" points="0 13.64 4.52 16.25 23.64 5.22 42.75 16.25 47.27 13.64 23.64 0 0 13.64")
       +e.G.text
-          path(d="M58.5,31.36l1.87-2.63a7.18,7.18,0,0,0,5.17,2.19c1.89,0,2.82-.88,2.82-1.8,0-2.87-9.35-.9-9.35-7,0-2.71,2.34-4.95,6.16-4.95a9,9,0,0,1,6.33,2.27L69.58,22a7,7,0,0,0-4.73-1.78c-1.48,0-2.31.66-2.31,1.63,0,2.59,9.33.86,9.33,6.92,0,3-2.12,5.21-6.5,5.21A9.29,9.29,0,0,1,58.5,31.36Z")
-          path(d="M76.61,32.14v6H73.52V21.89h3.09v1.48a4.56,4.56,0,0,1,3.63-1.77c3,0,5.21,2.24,5.21,6.16s-2.19,6.18-5.21,6.18A4.5,4.5,0,0,1,76.61,32.14Zm5.63-4.38c0-2-1.2-3.41-3-3.41a3.47,3.47,0,0,0-2.66,1.34v4.16a3.55,3.55,0,0,0,2.66,1.34C81,31.19,82.24,29.8,82.24,27.76Z")
-          path(d="M94.16,33.65V32.43a4.83,4.83,0,0,1-3.72,1.51,3.93,3.93,0,0,1-4.09-3.75V30c0-2.75,2.22-3.79,4.09-3.79a4.84,4.84,0,0,1,3.72,1.43V26.1c0-1.19-1-2-2.58-2a4.94,4.94,0,0,0-3.43,1.39l-1.15-2a7.74,7.74,0,0,1,5.14-1.85c2.68,0,5.14,1.07,5.14,4.45v7.6Zm0-2.83V29.36a3.09,3.09,0,0,0-2.48-1c-1.22,0-2.21.63-2.21,1.78s1,1.73,2.21,1.73A3.09,3.09,0,0,0,94.16,30.82Z")
-          path(d="M99,27.76a6,6,0,0,1,5.83-6.16,2.67,2.67,0,0,1,.4,0,5.47,5.47,0,0,1,4.65,2.11l-2,1.9a2.85,2.85,0,0,0-2.48-1.26,3.14,3.14,0,0,0-3.2,3.08c0,.11,0,.22,0,.33a3.16,3.16,0,0,0,2.88,3.42h.31a3,3,0,0,0,2.48-1.27l2,1.88a5.44,5.44,0,0,1-4.65,2.14A6,6,0,0,1,99,28.18Z")
-          path(d="M110.5,27.76a6,6,0,0,1,5.84-6.16h.25c3.5,0,5.89,2.63,5.89,6.47v.68h-8.74a3.16,3.16,0,0,0,3.38,2.73,5,5,0,0,0,3.14-1.17l1.37,2a7.31,7.31,0,0,1-4.85,1.63,6,6,0,0,1-6.28-5.71Zm6.09-3.71a2.81,2.81,0,0,0-2.9,2.61h5.79a2.72,2.72,0,0,0-2.82-2.61Z")
-          path(d="M131.19,32.14v6h-3.1V21.89h3.1v1.48a4.53,4.53,0,0,1,3.62-1.77c3,0,5.21,2.24,5.21,6.16s-2.19,6.18-5.21,6.18A4.53,4.53,0,0,1,131.19,32.14Zm5.62-4.38c0-2-1.19-3.41-3-3.41a3.45,3.45,0,0,0-2.65,1.34v4.16a3.55,3.55,0,0,0,2.65,1.34C135.62,31.19,136.81,29.8,136.81,27.76Z")
-          path(d="M140.92,27.76A6.22,6.22,0,1,1,147.14,34,6.21,6.21,0,0,1,140.92,27.76Zm9.23,0c0-1.83-1.09-3.41-3-3.41s-3,1.58-3,3.41,1.07,3.43,3,3.43S150.15,29.61,150.15,27.76Z")
-          path(d="M154.29,27.76A6.22,6.22,0,1,1,160.51,34,6.21,6.21,0,0,1,154.29,27.76Zm9.23,0c0-1.83-1.1-3.41-3-3.41s-3,1.58-3,3.41,1.07,3.43,3,3.43,3-1.58,3-3.43Z")
-          path(d="M168.41,33.65V17.41h3.09V33.65Z")
+          path(d="M57.51,34.28l1.92-2.71a7.33,7.33,0,0,0,5.31,2.26c2,0,2.9-.9,2.9-1.85,0-3-9.61-.93-9.61-7.21,0-2.77,2.4-5.08,6.33-5.08A9.26,9.26,0,0,1,70.86,22l-2,2.6A7.16,7.16,0,0,0,64,22.8c-1.53,0-2.38.67-2.38,1.67,0,2.65,9.58.88,9.58,7.1,0,3.06-2.18,5.36-6.68,5.36A9.52,9.52,0,0,1,57.51,34.28Z")
+          path(d="M76.12,35.08v6.15H72.94V24.55h3.18v1.52a4.66,4.66,0,0,1,3.72-1.82c3.11,0,5.36,2.3,5.36,6.32S83,36.93,79.84,36.93A4.6,4.6,0,0,1,76.12,35.08Zm5.77-4.51c0-2.07-1.22-3.5-3-3.5a3.54,3.54,0,0,0-2.72,1.38v4.28a3.62,3.62,0,0,0,2.72,1.37C80.67,34.1,81.89,32.68,81.89,30.57Z")
+          path(d="M94.15,36.63V35.38a5,5,0,0,1-3.83,1.55,4,4,0,0,1-4.2-4c0-2.83,2.28-3.91,4.2-3.91a5,5,0,0,1,3.83,1.48V28.87c0-1.22-1.05-2-2.65-2A5.1,5.1,0,0,0,88,28.27l-1.2-2.12a7.94,7.94,0,0,1,5.28-1.9c2.75,0,5.28,1.1,5.28,4.57v7.81Zm0-2.9v-1.5a3.16,3.16,0,0,0-2.55-1.06c-1.25,0-2.28.66-2.28,1.83s1,1.78,2.28,1.78A3.19,3.19,0,0,0,94.15,33.73Z")
+          path(d="M99.08,30.57a6.12,6.12,0,0,1,6.4-6.32,5.62,5.62,0,0,1,4.78,2.17l-2.08,1.95a2.92,2.92,0,0,0-2.55-1.3,3.23,3.23,0,0,0-3.28,3.5,3.25,3.25,0,0,0,3.28,3.53,3,3,0,0,0,2.55-1.3l2.08,1.93a5.58,5.58,0,0,1-4.78,2.2A6.13,6.13,0,0,1,99.08,30.57Z")
+          path(d="M110.93,30.57a6.15,6.15,0,0,1,6.26-6.32c3.6,0,6,2.7,6,6.65v.7h-9a3.25,3.25,0,0,0,3.48,2.8A5.13,5.13,0,0,0,121,33.2l1.4,2a7.53,7.53,0,0,1-5,1.68A6.13,6.13,0,0,1,110.93,30.57Zm6.26-3.8a2.91,2.91,0,0,0-3,2.68h6A2.79,2.79,0,0,0,117.19,26.77Z")
+          path(d="M128.09,35.08v6.15h-3.18V24.55h3.18v1.52a4.68,4.68,0,0,1,3.73-1.82c3.1,0,5.35,2.3,5.35,6.32s-2.25,6.36-5.35,6.36A4.62,4.62,0,0,1,128.09,35.08Zm5.78-4.51c0-2.07-1.23-3.5-3.05-3.5a3.56,3.56,0,0,0-2.73,1.38v4.28a3.64,3.64,0,0,0,2.73,1.37C132.64,34.1,133.87,32.68,133.87,30.57Z")
+          path(d="M138.09,30.57a6.4,6.4,0,0,1,12.79,0,6.4,6.4,0,0,1-12.79,0Zm9.48,0c0-1.87-1.12-3.5-3.1-3.5s-3.07,1.63-3.07,3.5,1.1,3.53,3.07,3.53S147.57,32.48,147.57,30.57Z")
+          path(d="M151.83,30.57a6.39,6.39,0,0,1,12.78,0,6.39,6.39,0,0,1-12.78,0Zm9.47,0c0-1.87-1.12-3.5-3.1-3.5s-3.07,1.63-3.07,3.5,1.1,3.53,3.07,3.53S161.3,32.48,161.3,30.57Z")
+          path(d="M166.33,36.63V19.94h3.18V36.63Z")
 
 mixin logo-image(tag)
   +b(tag || 'a').logo&attributes(attributes)
