start update step 6

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -61,6 +61,12 @@
     height: 10px;
   }
 
+  &_size11 {
+    min-width: 11px;
+    width: 11px;
+    height: 11px;
+  }
+
   &_size17 {
     min-width: 17px;
     width: 17px;
