--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -84,14 +84,14 @@
 
   &_big {
     box-sizing: border-box;
-    min-height: 442px;
+    min-height: 505px;
 
-    @include screen('md') {
-      min-height: 350px;
+    @include screen('lg') {
+      min-height: 325px;
     }
 
     @include screen('sm') {
-      min-height: 200px;
+      min-height: 100%;
     }
   }
 
