--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -45,7 +45,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       margin-top: -10px;
     }
 
-    &_no-top {
+    &_no-top, &_notop {
       margin-top: 0;
     }
   }
@@ -164,7 +164,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -55px;
   }
 
-  &_no-top:not(.grid_inner) {
+  &_no-top:not(.grid_inner), &_notop:not(.grid_inner) {
     margin-top: 0;
   }
 
@@ -348,7 +348,7 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
-    #{$b}_no-top:not(.grid_inner) & {
+    #{$b}_no-top:not(.grid_inner) &, #{$b}_notop:not(.grid_inner) & {
       padding-top: 0;
     }
   }
