--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -248,6 +248,11 @@
     &_save {
       width: 15px;
       height: 15px;
+
+      @include screen('sm') {
+        width: 10px;
+        height: 10px;
+      }
     }
 
     &_location {
