--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -289,6 +289,26 @@
       display: flex;
       flex-wrap: wrap;
     }
+
+    #{$b}_reverse &_sml-pad {
+      @include screen('lg') {
+        margin-bottom: 18px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 0;
+      }
+    }
+
+    #{$b}_wide-lg &_sml-pad {
+      @include screen('md') {
+        margin-bottom: 18px;
+      }
+
+      @include screen('sm') {
+        margin-bottom: 0;
+      }
+    }
   }
 
   &_last {
