--- a/app/components/side-navigation/side-navigation.pug
+++ b/app/components/side-navigation/side-navigation.pug
@@ -3,4 +3,4 @@ mixin side-navigation(note)
     +b.side-navigation&attributes(attributes)
       block
       if note
-        +note!= note
+        +note._side.hide-sm!= note
