--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -158,10 +158,12 @@ $color-tooltip: #5bb2d6;
 $color-form-arrow: #a1abb8;
 $color-viewing: #cfb067;
 $color-user-link-active: #9ea7b3;
-$color-notice-bg: #ecf5f7;
+$color-notice-bg: #ecf5f7f3;
 $color-notice-bg-hover: #d9e8eb;
 $color-form-toggle-title: #1f242a;
 $color-step-active: #2a3037;
+$color-tab-disabled: #a1a5ab;
+$color-compose-text: #a6aab3;
 
 // ##########
 // Transitions
