--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -212,6 +212,8 @@
   }
 
   &-content {
+    display: block;
+    width: 100%;
 
     &__wrapper {
       display: none;
@@ -224,6 +226,27 @@
         opacity: 1;
         transform: translate3d(0, 0, 0);
       }
+    }
+  }
+
+  &__item {
+    flex: 1;
+    margin-top: 11px;
+
+    @include screen('sm') {
+      flex: none;
+      width: 100%;
+    }
+  }
+
+  &_form {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin-top: 34px;
+
+    @include screen('sm') {
+      flex-direction: column;
     }
   }
 }
