--- a/app/blocks/time/time.scss
+++ b/app/blocks/time/time.scss
@@ -43,6 +43,16 @@
       }
     }
 
+    &_fz18 {
+      @include text-big;
+
+      @include screen('sm') {
+        @include text12;
+
+        line-height: (25 / 12);
+      }
+    }
+
     &_wrap {
       white-space: normal;
     }
@@ -68,6 +78,34 @@
     margin: 0 8px;
     fill: $color-basic;
     min-width: 16px;
+
+    &_big {
+      width: 20px;
+      height: 9px;
+      min-width: 20px;
+
+      @include screen('sm') {
+        width: 16px;
+        height: auto;
+        min-width: 16px;
+      }
+    }
+
+    &_bmg {
+      margin: 0 22px;
+
+      @include screen('lg') {
+        margin: 0 42px 0 28px;
+      }
+
+      @include screen('sm') {
+        margin: 0 14px 0 12px;
+      }
+    }
+
+    &_grad {
+      fill: url('#main-gradient');
+    }
   }
 
   &_sb {
