--- a/app/pages/new-space/new-space-step7.pug
+++ b/app/pages/new-space/new-space-step7.pug
@@ -7,14 +7,14 @@ block header
   -var headerClass = '_border'
 
 block content
-  +page-header._wide-lg._hpad
+  +page-header._wide-lg._hpad._nowrap
     .container
       +e.wrapper
-        +page-header-side
-          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to previous step
-        +page-header-main._main_mgt
-          +breadcrumbs-form
-            +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation.hide-md
+        +page-header-side._md-fx
+          +link-icon('back')._no-shadow._back._bold.__back(href="#") Back to previous step
+        +page-header-main
+          +breadcrumbs-form.hide-md
+            +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation
             +e.step <b>Step 7</b> Publish
           +e.links
             +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link All changes saved
