--- a/app/pages/new-space/new-space-step8.pug
+++ b/app/pages/new-space/new-space-step8.pug
@@ -7,22 +7,22 @@ block header
   -var headerClass = '_border'
 
 block content
-  +page-header._wide-lg._hpad
+  +page-header._wide-lg._hpad._nowrap
     .container
       +e.wrapper
-        +page-header-side
-          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to previous step
-        +page-header-main._main_mgt
-          +breadcrumbs-form
-            +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation.hide-md
+        +page-header-side._md-fx
+          +link-icon('back')._no-shadow._back._bold.__back(href="#") Back to previous step
+        +page-header-main
+          +breadcrumbs-form.hide-md
+            +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation
             +e.step <b>Step 6</b> Terms and conditions
           +e.links
-            +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link All changes saved
+            +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link_mfz10 All changes saved
       +progress(75)
   +content-origin._wide-lg._reverse._last
     .container
       +e.wrapper
-        +content-column-aside.hide-md
+        +content-column-aside._sml-pad
           +side-navigation('Please write here your Terms and Conditions. This is infromation will be used as a part of rental contract.')._pt46
             +page-info.__info
               +page-info-image
@@ -31,15 +31,99 @@ block content
               +page-info-description Step 6 <i>of 8</i>
         +content-column-main._no-ptop
           +form()._white._flex._pb2.js-form-with-hidden-panel(data-validated-form)
-            +e.container_pt45._pb40
+            +e.container._pds0._pt42._pb0
+              +form-section._pds._border._border_no-sm._mg21
+                +form-section-header._fx._mg26-2
+                  +form-section-title._small2._mg28._sm-ord2
+                    span.hide-sm Terms and Conditions
+                    span.hide-from-sm Terms and conditions for:
+                  +time-origin.__sequence
+                    +time-text
+                      +e.DIV.time_fz18._wrap Step 1: Select Offer types for Particular Space
+                    +time-arrow._big._bmg._grad
+                    +time-text
+                      +e.DIV.time_fz18._wrap Step 2: Copy and paste Terms and conditions for each Offer type
+              +form-section._pds._border._border_no-sm._mg21
+                +content-zone._mid2._pr
+                  p You can just copy and paste here your Standart rental contract. Remember that any document has it’s own editing, <b>so please remove any blank placeholders, unnecessary character editing, company and client names.</b> <strong>This section must contain only your space terms and conditions.</strong>
+                +tabs('div')._form.__tabs
+                  +composite-tab({title: 'Hot Desk', box: '_orange _size11', plus: true, save: true})._orange.is-active.__item
+                    +e.INPUT.input(name="typeOffer", value="hd", checked, type="checkbox")
+                    +e.SPAN.box
+                      +icon('check').__icon
+                  +composite-tab({title: 'Fixed desk', box: '_red _size11', plus: true, save: true})._red.is-saved.__item
+                    +e.INPUT.input(name="typeOffer", value="fd", checked, type="checkbox")
+                    +e.SPAN.box
+                      +icon('check').__icon
+                  +composite-tab({title: 'Meeting room', box: '_blue _size11', plus: true, save: true})._blue.is-disabled.__item
+                    +e.INPUT.input(name="typeOffer", value="mr", type="checkbox")
+                    +e.SPAN.box
+                      +icon('check').__icon
+                  +composite-tab({title: 'Office space', box: '_green _size11', plus: true, save: true})._green.is-disabled.__item
+                    +e.INPUT.input(name="typeOffer", value="os", type="checkbox")
+                    +e.SPAN.box
+                      +icon('check').__icon
               +form-section
-                +e.header_mg43
-                  +content-zone._mid2._pr
-                    h5 Quick Tip:
-                    p You can just copy and paste here your Standart rental contract. Remember that any document has it’s own editing, <b>so please remove any blank placeholders, unnecessary character editing, company and client names.</b> <strong>This section must contain only your space terms and conditions.</strong>
-                +form-section-wrapper
-                  +form-box('', '', '', '', '')
-                    +textarea(type="text" name="termsConditions" placeholder="Terms and conditions" required).textarea_big.textarea_bordered.textarea_def-plchldr
+                +e.FIELDSET.modal.is-active
+                  +e.modal-top
+                    +close.__modal-cross.js-close-form-modal
+                    +e.modal-title
+                      +offer-info._dark
+                        +box._size11._orange
+                        +e.title Hot Desk
+                      +form-section-title._small Terms and conditions
+                  +e.modal-content
+                    +form-section-wrapper
+                      +form-box('', '', '', '', '')
+                        +textarea(type="text" name="termsConditionsHD" placeholder="Terms and conditions for HOT DESK").textarea_big.textarea_bordered.textarea_def-plchldr
+                  +e.modal-bottom
+                    +button('button')(type="button")._short._mob-smaller.__button Save
+                      span.hide-sm &nbsp;Terms and Conditions for HOT DESK
+                +e.FIELDSET.modal
+                  +e.modal-top
+                    +close.__modal-cross.js-close-form-modal
+                    +e.modal-title
+                      +offer-info._dark
+                        +box._size11._red
+                        +e.title Fixed Desk
+                      +form-section-title._small Terms and conditions
+                  +e.modal-content
+                    +form-section-wrapper
+                      +form-box('', '', '', '', '')
+                        +textarea(type="text" name="termsConditionsFD" placeholder="Terms and conditions for FIXED DESK").textarea_big.textarea_bordered.textarea_def-plchldr
+                  +e.modal-bottom
+                    +button('button')(type="button")._short._mob-smaller.__button Save
+                      span.hide-sm &nbsp;Terms and Conditions for FIXED DESK
+                +e.FIELDSET.modal
+                  +e.modal-top
+                    +close.__modal-cross.js-close-form-modal
+                    +e.modal-title
+                      +offer-info._dark
+                        +box._size11._blue
+                        +e.title Meeting Room
+                      +form-section-title._small Terms and conditions
+                  +e.modal-content
+                    +form-section-wrapper
+                      +form-box('', '', '', '', '')
+                        +textarea(type="text" name="termsConditionsMR" placeholder="Terms and conditions for MEETING ROOM").textarea_big.textarea_bordered.textarea_def-plchldr
+                  +e.modal-bottom
+                    +button('button')(type="button")._short._mob-smaller.__button Save
+                      span.hide-sm &nbsp;Terms and Conditions for MEETING ROOM
+                +e.FIELDSET.modal
+                  +e.modal-top
+                    +close.__modal-cross.js-close-form-modal
+                    +e.modal-title
+                      +offer-info._dark
+                        +box._size11._green
+                        +e.title OFFICE SPACE
+                      +form-section-title._small Terms and conditions
+                  +e.modal-content
+                    +form-section-wrapper
+                      +form-box('', '', '', '', '')
+                        +textarea(type="text" name="termsConditionsOS" placeholder="Terms and conditions for OFFICE SPACE").textarea_big.textarea_bordered.textarea_def-plchldr
+                  +e.modal-bottom
+                    +button('button')(type="button")._short._mob-smaller.__button Save
+                      span.hide-sm &nbsp;Terms and Conditions for OFFICE SPACE
               +e.panel_fixed._fixed_visible(data-hidden-panel)
                 .container
                   +grid.grid_big.grid_notop
@@ -47,7 +131,7 @@ block content
                     +col({ xl: 9, md: 12 })
                       +form-panel.__panel_border
                         +link-icon('select-arrow', 'a')(href="#")._back._bold._no-shadow.__button Back
-                        +button-icon('button', 'select-arrow')(type="submit").__button_wide Next
+                        +button('button')(type="submit")._short._mob-smaller.__button_wide Save and continue
 
 
 block panels
